// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MLocationBody <MLocationBody> with error displays correct fallback content when map_style_url is misconfigured 1`] = `
<div
  class="mx_EventTile_body mx_MLocationBody"
>
  <span
    class="mx_EventTile_tileError"
  >
    Unable to load map: This homeserver is not configured correctly to display maps, or the configured map server may be unreachable.
  </span>
  <br />
  Shared a location: Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000
</div>
`;

exports[`MLocationBody <MLocationBody> with error displays correct fallback content without error style when map_style_url is not configured 1`] = `
<div
  class="mx_EventTile_body mx_MLocationBody"
>
  <span
    class=""
  >
    Unable to load map: This homeserver is not configured to display maps.
  </span>
  <br />
  Shared a location: Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000
</div>
`;

exports[`MLocationBody <MLocationBody> without error renders map correctly 1`] = `
<DocumentFragment>
  <div
    class="mx_MLocationBody"
  >
    <div
      aria-labelledby=":ri:"
      class="mx_MLocationBody_map"
    >
      <div
        class="mx_Map mx_MLocationBody_map"
        id="mx_Map_mx_MLocationBody_$2_vY7Q4uEh"
      >
        <span>
          <div
            class="mx_Marker mx_Marker_defaultColor"
            id="mx_MLocationBody_$2_vY7Q4uEh-marker"
          >
            <div
              class="mx_Marker_border"
            >
              <svg
                class="mx_Marker_icon"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 21.325a2.1 2.1 0 0 1-.7-.125 1.8 1.8 0 0 1-.625-.375A39 39 0 0 1 7.8 17.9q-1.25-1.425-2.087-2.762-.838-1.338-1.275-2.575Q4 11.325 4 10.2q0-3.75 2.412-5.975T12 2t5.587 2.225T20 10.2q0 1.125-.437 2.363-.438 1.237-1.275 2.574A22 22 0 0 1 16.2 17.9a39 39 0 0 1-2.875 2.925 1.8 1.8 0 0 1-.625.375 2.1 2.1 0 0 1-.7.125M12 12q.825 0 1.412-.588Q14 10.826 14 10t-.588-1.412A1.93 1.93 0 0 0 12 8q-.825 0-1.412.588A1.93 1.93 0 0 0 10 10q0 .825.588 1.412Q11.175 12 12 12"
                />
              </svg>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MLocationBody <MLocationBody> without error renders marker correctly for a self share 1`] = `
<DocumentFragment>
  <div
    class="mx_MLocationBody"
  >
    <div
      aria-labelledby=":ru:"
      class="mx_MLocationBody_map"
    >
      <div
        class="mx_Map mx_MLocationBody_map"
        id="mx_Map_mx_MLocationBody_$3_vY7Q4uEh"
      >
        <span>
          <div
            class="mx_Marker mx_Marker_defaultColor"
            id="mx_MLocationBody_$3_vY7Q4uEh-marker"
          >
            <div
              class="mx_Marker_border"
            >
              <span
                class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
                data-color="3"
                data-testid="avatar-img"
                data-type="round"
                role="presentation"
                style="--cpd-avatar-size: 36px;"
                title="@user:server"
              >
                u
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
